docs/en/5.0.0/api/signature.md
#Signature
<div class="btn-group"><a href="#Methods" class="btn"><i class="icon-cog"></i> Methods<sup>&nbsp;6</sub></a><a class="btn dropdown-toggle" data-toggle="dropdown" data-target="#" href="#Methods" >  <span class="caret"></span>&nbsp;</a><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Methods - Class</i></b></a><li><a href="#mcapture" data-target="cMethodcapture" class="autouncollapse">capture</a></li><li><a href="#mclear" data-target="cMethodclear" class="autouncollapse">clear</a></li><li><a href="#mhide" data-target="cMethodhide" class="autouncollapse">hide</a></li><li><a href="#msetVectorCallback" data-target="cMethodsetVectorCallback" class="autouncollapse">setVectorCallback</a></li><li><a href="#mshow" data-target="cMethodshow" class="autouncollapse">show</a></li><li><a href="#mtakeFullScreen" data-target="cMethodtakeFullScreen" class="autouncollapse">takeFullScreen</a></li></li></ul></div><div class="btn-group"><a href="#Properties" class="btn"><i class="icon-list"></i> Properties<sup>&nbsp;11</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Class Properties</i></b></a><li><a href="#pbgColor" data-target="cPropertybgColor" class="autouncollapse">bgColor</a></li><li><a href="#pborder" data-target="cPropertyborder" class="autouncollapse">border</a></li><li><a href="#pcompressionFormat" data-target="cPropertycompressionFormat" class="autouncollapse"><span class="text-info">compressionFormat</span></a></li><li><a href="#pfileName" data-target="cPropertyfileName" class="autouncollapse"><span class="text-info">fileName</span></a></li><li><a href="#pheight" data-target="cPropertyheight" class="autouncollapse">height</a></li><li><a href="#pleft" data-target="cPropertyleft" class="autouncollapse">left</a></li><li><a href="#poutputFormat" data-target="cPropertyoutputFormat" class="autouncollapse">outputFormat</a></li><li><a href="#ppenColor" data-target="cPropertypenColor" class="autouncollapse">penColor</a></li><li><a href="#ppenWidth" data-target="cPropertypenWidth" class="autouncollapse">penWidth</a></li><li><a href="#ptop" data-target="cPropertytop" class="autouncollapse">top</a></li><li><a href="#pwidth" data-target="cPropertywidth" class="autouncollapse">width</a></li></li></ul></div><div class="btn-group"><a href="#Examples" class="btn"><i class="icon-edit"></i> Examples<sup>&nbsp;3</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li><a href="#e0" data-target="eExample0" class="autouncollapse">Capture signature to file (fullscreen) and display it in a view</a></li><li><a href="#e1" data-target="eExample1" class="autouncollapse">Set signature capture properties</a></li><li><a href="#e2" data-target="eExample2" class="autouncollapse">Capture as DataURI</a></li></ul></div><div class="btn-group"><a href="#Remarks" class="btn"><i class="icon-warning-sign"></i> Remarks<sup>&nbsp;4</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li><a href="#r0" data-target="rRemark0" class="autouncollapse">Fullscreen and In-line</a></li><li><a href="#r1" data-target="rRemark1" class="autouncollapse">Parameters which clear the signature</a></li><li><a href="#r2" data-target="rRemark2" class="autouncollapse">Page Navigation</a></li><li><a href="#r3" data-target="rRemark3" class="autouncollapse">Persistent Behaviour</a></li></ul></div><div class="btn-group"><a href="#License" class="btn"><i class="icon-shopping-cart"></i> Licensing</a></div><div class="btn-group pull-right"><button class="btn dropdown-toggle" id="apiFilterBtn" data-toggle="dropdown" href="#" title="Filter Properties and Methods"><i class="icon-filter "></i>Show</button><select id="apiFilter" class="dropdown-menu apiFilter"><option value="all">All</option><option value="js">JavaScript</option><option value="ruby">Ruby</option><option value="android">Android</option><option value="ios">iOS</option><option value="wm">Windows Mobile</option><option value="wp8">Windows Phone 8</option><option value="w32">Windows Desktop</option><option value="msi">MSI Only</option></select></div><div  id="apibody" style="overflow:auto;padding-right: 5px;">
<p>creates a rectangular box within which the user can draw by using a finger or the device&rsquo;s stylus to record handwritten data. Common usages for this tag include the capture of client/customer signatures and the input of handwritten text/notations.</p>
<h2>Enabling the API</h2>

<p>In order to use this API you must include the following extension in your <code>build.yml</code></p>

<pre><code>:::ruby
extensions: ["signature"]
</code></pre>

<p>The <code>signature</code> extension is also included automatically if you specify the following in your <code>build.yml</code></p>

<pre><code>:::ruby
app_type: "rhoelements"
</code></pre>

<p>NOTE: If you are building a Windows Mobile or Windows CE app with this API, you must set your app_type as &ldquo;rhoelements&rdquo; in your build.yml as shown <a href="../guide/build_config#other-build-time-settings">here</a>.</p>

<h2>JavaScript Usage</h2>

<p>Be sure to review the <a href="/guide/api_js">JavaScript API Usage</a> guide for important information about using this API in JavaScript.</p>

<h2>Ruby Usage</h2>

<p>Be sure to review the <a href="/guide/api_ruby">Ruby API Usage</a> guide for important information about using this API in Ruby.</p>


<a name='Methods'></a>
<h2><i class='icon-cog'></i>Methods</h2>

<div class="accordion" id="accordion"><a name ='mcapture'/><div class=' method  js ruby android ios' id='mcapture'><h3><strong  >capture</strong><span style='font-size:.7em;font-weight:normal;'>(<span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mcapture1" data-toggle="tab">Description</a></li><li ><a href="#mcapture2" data-toggle="tab">Parameters</a></li><li ><a href="#mcapture3" data-toggle="tab">Callback</a></li><li ><a href="#mcapture4" data-toggle="tab">Return</a></li><li ><a href="#mcapture6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-capture'><div class="tab-pane fade active in" id="mcapture1"><p>Captures the in-line signature area as an image. This function works with a non-modal signature capture area shown inside browser window. All in-line signature capture functions (like this) do not has affect the capture area shown in takeFullScreen (modal full screen capture area).</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mcapture2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-warning'>Mandatory</span> </li></ul></div></div><div class="tab-pane fade" id="mcapture3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>status : <span class='text-info'>STRING</span><p><p>Whether a signature was captured or the signature capture area was dismissed (Fullscreen version only). Possible values:&lsquo;ok&rsquo; or &lsquo;cancel&rsquo;</p>
 </p></li><li>imageUri : <span class='text-info'>STRING</span><p><p>If the outputFormat is &ldquo;image&rdquo;, this will be the URI of the captured signature image. If the outputFormat is &ldquo;dataUri&rdquo;, this will be the DataURI representation of the captured signature image.</p>
 </p></li><li>signature_uri : <span class='text-info'>STRING</span><p><p>If the outputFormat is &ldquo;image&rdquo;, this will be the URI of the captured signature image. If the outputFormat is &ldquo;dataUri&rdquo;, this will be the DataURI representation of the captured signature image.</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="mcapture4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="mcapture6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Signature.capture(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Signature.capture(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mclear'/><div class=' method  js ruby android ios' id='mclear'><h3><strong  >clear</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mclear1" data-toggle="tab">Description</a></li><li ><a href="#mclear4" data-toggle="tab">Return</a></li><li ><a href="#mclear6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-clear'><div class="tab-pane fade active in" id="mclear1"><p>Clears an in-line capture area. This function works with a non-modal signature capture area shown inside browser window. All in-line signature capture functions (like this) do not has affect to capture area shown in takeFullScreen (modal full screen capture area)</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mclear2"></div><div class="tab-pane fade" id="mclear3"></div><div class="tab-pane fade" id="mclear4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mclear6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Signature.clear()</code> </li><li>Ruby: <code>Rho::Signature.clear()</code></li></ul></li></ul></div></div></div>  </div><a name ='mhide'/><div class=' method  js ruby android ios' id='mhide'><h3><strong  >hide</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mhide1" data-toggle="tab">Description</a></li><li ><a href="#mhide4" data-toggle="tab">Return</a></li><li ><a href="#mhide6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-hide'><div class="tab-pane fade active in" id="mhide1"><p>Hides an in-line capture area from view. It clears the inputed signature for in-line signature areas. In a hidden state, a user cannot interact with the signature capture area. This function work with non-modal signature capture area showed inside browser window. All in-line signature capture functions (like this) do not has affect to capture area showed in takeFullScreen (modal full screen capture area)</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mhide2"></div><div class="tab-pane fade" id="mhide3"></div><div class="tab-pane fade" id="mhide4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mhide6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Signature.hide()</code> </li><li>Ruby: <code>Rho::Signature.hide()</code></li></ul></li></ul></div></div></div>  </div><a name ='msetVectorCallback'/><div class=' method  js ruby android' id='msetVectorCallback'><h3><strong  >setVectorCallback</strong><span style='font-size:.7em;font-weight:normal;'>(<span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#msetVectorCallback1" data-toggle="tab">Description</a></li><li ><a href="#msetVectorCallback2" data-toggle="tab">Parameters</a></li><li ><a href="#msetVectorCallback3" data-toggle="tab">Callback</a></li><li ><a href="#msetVectorCallback4" data-toggle="tab">Return</a></li><li ><a href="#msetVectorCallback6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-setVectorCallback'><div class="tab-pane fade active in" id="msetVectorCallback1"><p>Signature data is formatted into a series of vectors and returned to the application via this callback function. The received data may not represent the entire signature as the vectors will be sent in batches if the signature is large. A single vector (array entry) contains an X, Y coordinate and the beginning / end of the signature is defined by (65535, 65535). This callback is independent of the callback of the capture method, when specified the callback will be called whenever a &lsquo;pen up&rsquo; occurs in the signature box.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="msetVectorCallback2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-warning'>Mandatory</span> </li></ul></div></div><div class="tab-pane fade" id="msetVectorCallback3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>vectorArray : <span class='text-info'>ARRAY</span><p><p>JavaScript array of vectors which represent the signature.</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="msetVectorCallback4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="msetVectorCallback6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Signature.setVectorCallback(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Signature.setVectorCallback(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mshow'/><div class=' method  js ruby android ios' id='mshow'><h3><strong  >show</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">HASH</span> propertyMap)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mshow1" data-toggle="tab">Description</a></li><li ><a href="#mshow2" data-toggle="tab">Parameters</a></li><li ><a href="#mshow4" data-toggle="tab">Return</a></li><li ><a href="#mshow6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-show'><div class="tab-pane fade active in" id="mshow1"><p>Show in-line signature window. This function works witha non-modal signature capture area shown inside browser window. All in-line signature capture functions (like this) do not has affect the capture area shown in takeFullScreen (modal full screen capture area).</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mshow2"><div><p><strong>Parameters</strong></p><ul><li>propertyMap : <span class='text-info'>HASH</span> <span class='label label-info'>Optional</span><p><p>Map of signature properties to be set</p>
 Valid `properties` for this parameter are the properties avaliable to this API module. <a href='#Properties'>Check the property section</a> <p>Use already set properties</p>
</p></li></ul></div></div><div class="tab-pane fade" id="mshow3"></div><div class="tab-pane fade" id="mshow4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mshow6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Signature.show(<span class="text-info">HASH</span> propertyMap)</code> </li><li>Ruby: <code>Rho::Signature.show(<span class="text-info">HASH</span> propertyMap)</code></li></ul></li></ul></div></div></div>  </div><a name ='mtakeFullScreen'/><div class=' method  js ruby android ios' id='mtakeFullScreen'><h3><strong  >takeFullScreen</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mtakeFullScreen1" data-toggle="tab">Description</a></li><li ><a href="#mtakeFullScreen2" data-toggle="tab">Parameters</a></li><li ><a href="#mtakeFullScreen3" data-toggle="tab">Callback</a></li><li ><a href="#mtakeFullScreen4" data-toggle="tab">Return</a></li><li ><a href="#mtakeFullScreen6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-takeFullScreen'><div class="tab-pane fade active in" id="mtakeFullScreen1"><p>Shows a modal window with signature capture area and UI (toolbar with buttons) for cancel / capture and return to main application window. The callback is fired when the signature is closed (when in fullscreen) or when capture is called. In WM/CE, the signature area has visible buttons for &lsquo;clear&rsquo;, &lsquo;capture&rsquo; and &lsquo;cancel&rsquo;. In Android / iOS, the signature area has images which will behave as buttons for &lsquo;clear&rsquo;, &lsquo;capture&rsquo; and &lsquo;cancel&rsquo;. This function open modal full screen window, therefore other functions related to in-line signature capture (work with inside browser window area) do not affect the capture window shown by this function.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mtakeFullScreen2"><div><p><strong>Parameters</strong></p><ul><li>propertyMap : <span class='text-info'>HASH</span> <span class='label label-info'>Optional</span><p><p>Map of signature properties to be set</p>
 Valid `properties` for this parameter are the properties avaliable to this API module. <a href='#Properties'>Check the property section</a> <p>Use already set properties</p>
</p></li><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-warning'>Mandatory</span> </li></ul></div></div><div class="tab-pane fade" id="mtakeFullScreen3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>status : <span class='text-info'>STRING</span><p><p>Whether a signature was captured or the signature capture area was dismissed (Fullscreen version only). Possible values:&lsquo;ok&rsquo; or &lsquo;cancel&rsquo;</p>
 </p></li><li>imageUri : <span class='text-info'>STRING</span><p><p>If the outputFormat is &ldquo;image&rdquo;, this will be the URI of the captured signature image. If the outputFormat is &ldquo;dataUri&rdquo;, this will be the DataURI representation of the captured signature image.</p>
 </p></li><li>signature_uri : <span class='text-info'>STRING</span><p><p>If the outputFormat is &ldquo;image&rdquo;, this will be the URI of the captured signature image. If the outputFormat is &ldquo;dataUri&rdquo;, this will be the DataURI representation of the captured signature image.</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="mtakeFullScreen4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="mtakeFullScreen6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Signature.takeFullScreen(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Signature.takeFullScreen(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div></div>
<a name='Properties'></a>
<h2><i class='icon-list'></i>Properties</h2>

<a name='pbgColor'></a><div class=' method  js ruby android ios' id='pbgColor'><h3><strong  >bgColor</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  <span class='muted pull-right'>1.0.0</span></span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pbgColor1" data-toggle="tab">Description</a></li><li ><a href="#pbgColor2" data-toggle="tab">Params</a></li><li ><a href="#pbgColor6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-bgColor'><div class="tab-pane fade active in" id="pbgColor1"><p>RGB or ARGB value that sets the background color of the signature capture area.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pbgColor2"><p><strong>Default:</strong> #FFFFFFFF</p></div><div class="tab-pane fade" id="pbgColor5"></div><div class="tab-pane fade" id="pbgColor6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Signature.bgColor</code> </li><li>Ruby: <code>Rho::Signature.bgColor</code></li></ul></li></ul></div></div></div>  </div><a name='pborder'></a><div class=' method  js ruby android' id='pborder'><h3><strong  >border</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>BOOLEAN</span>  <span class='muted pull-right'>1.0.0</span></span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pborder1" data-toggle="tab">Description</a></li><li ><a href="#pborder2" data-toggle="tab">Params</a></li><li ><a href="#pborder6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-border'><div class="tab-pane fade active in" id="pborder1"><p>Shows or hides a border for the rectangular capture area. Not applicable to fullscreen signature capture area.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pborder2"><p><strong>Default:</strong> true</p></div><div class="tab-pane fade" id="pborder5"></div><div class="tab-pane fade" id="pborder6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Signature.border</code> </li><li>Ruby: <code>Rho::Signature.border</code></li></ul></li></ul></div></div></div>  </div><a name='pcompressionFormat'></a><div class=' method  js ruby android ios' id='pcompressionFormat'><h3><strong  ><span class="text-info">compressionFormat</span></strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  <span class='muted pull-right'>4.0.0</span></span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pcompressionFormat1" data-toggle="tab">Description</a></li><li ><a href="#pcompressionFormat5" data-toggle="tab">Values</a></li><li ><a href="#pcompressionFormat6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-compressionFormat'><div class="tab-pane fade active in" id="pcompressionFormat1"><span class='label label-info'>Replaces:imageFormat</span> <p>Compression format of the image file for the captured signature. In WM/CE, irrespective of setting any format, the output format will be of bitmap type. In WM/CE, when compressionFormat is queried, it will be of bitmap type always.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pcompressionFormat2"></div><div class="tab-pane fade" id="pcompressionFormat5"><p><strong>Possible Values</strong> (<span class='text-info'>STRING</span>):</p> <dt>Constant: Rho.Signature.COMPRESSION_FORMAT_JPG (For Ruby use "::" instead of ".")<br/> String: jpg </dt><dd><p>JPEG file format (Not available on WM/CE).</p>
</dt><dt>Constant: Rho.Signature.COMPRESSION_FORMAT_PNG (For Ruby use "::" instead of ".")<br/> String: png </dt><dd><p>Portable Network Graphics file (Not available on WM/CE).</p>
</dt><dt>Constant: Rho.Signature.COMPRESSION_FORMAT_BMP (For Ruby use "::" instead of ".")<br/> String: bmp </dt><dd><p>Bitmap image file (Not available on iOS).</p>
</dt></dl></div><div class="tab-pane fade" id="pcompressionFormat6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Signature.compressionFormat</code> </li><li>Ruby: <code>Rho::Signature.compressionFormat</code></li></ul></li></ul></div></div></div>  </div><a name='pfileName'></a><div class=' method  js ruby android ios' id='pfileName'><h3><strong  ><span class="text-info">fileName</span></strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  <span class='muted pull-right'>1.0.0</span></span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pfileName1" data-toggle="tab">Description</a></li><li ><a href="#pfileName2" data-toggle="tab">Params</a></li><li ><a href="#pfileName6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-fileName'><div class="tab-pane fade active in" id="pfileName1"><span class='label label-info'>Replaces:name</span> <p>The filename in which to store the signature image, if &ldquo;image&rdquo; is used as the outputFormat. The file extension is determined by the compressionFormat used.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pfileName2"><p><strong>Default:</strong> signature</p></div><div class="tab-pane fade" id="pfileName5"></div><div class="tab-pane fade" id="pfileName6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Signature.fileName</code> </li><li>Ruby: <code>Rho::Signature.fileName</code></li></ul></li></ul></div></div></div>  </div><a name='pheight'></a><div class=' method  js ruby android ios' id='pheight'><h3><strong  >height</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>INTEGER</span>  <span class='muted pull-right'>1.0.0</span></span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pheight1" data-toggle="tab">Description</a></li><li ><a href="#pheight2" data-toggle="tab">Params</a></li><li ><a href="#pheight6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-height'><div class="tab-pane fade active in" id="pheight1"><p>The height of the signature capture area in pixels. Not applicable to fullscreen signature capture area.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pheight2"><p><strong>Default:</strong> 150</p></div><div class="tab-pane fade" id="pheight5"></div><div class="tab-pane fade" id="pheight6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Signature.height</code> </li><li>Ruby: <code>Rho::Signature.height</code></li></ul></li></ul></div></div></div>  </div><a name='pleft'></a><div class=' method  js ruby android ios' id='pleft'><h3><strong  >left</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>INTEGER</span>  <span class='muted pull-right'>1.0.0</span></span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pleft1" data-toggle="tab">Description</a></li><li ><a href="#pleft2" data-toggle="tab">Params</a></li><li ><a href="#pleft6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-left'><div class="tab-pane fade active in" id="pleft1"><p>The coordinates in pixels of the left side of the signature capture area. Not applicable to fullscreen signature capture area.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pleft2"><p><strong>Default:</strong> 15</p></div><div class="tab-pane fade" id="pleft5"></div><div class="tab-pane fade" id="pleft6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Signature.left</code> </li><li>Ruby: <code>Rho::Signature.left</code></li></ul></li></ul></div></div></div>  </div><a name='poutputFormat'></a><div class=' method  js ruby android ios' id='poutputFormat'><h3><strong  >outputFormat</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  <span class='muted pull-right'>4.0.0</span></span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#poutputFormat1" data-toggle="tab">Description</a></li><li ><a href="#poutputFormat2" data-toggle="tab">Params</a></li><li ><a href="#poutputFormat5" data-toggle="tab">Values</a></li><li ><a href="#poutputFormat6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-outputFormat'><div class="tab-pane fade active in" id="poutputFormat1"><p>The return type of the saved signature capture image.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="poutputFormat2"><p><strong>Default:</strong> image</p></div><div class="tab-pane fade" id="poutputFormat5"><p><strong>Possible Values</strong> (<span class='text-info'>STRING</span>):</p> <dt>Constant: Rho.Signature.OUTPUT_FORMAT_IMAGE (For Ruby use "::" instead of ".")<br/> String: image </dt><dd><p>Outputs the signature capture image into an image file. The compression method and extension of the image file can be specified in compressionFormat.</p>
</dt><dt>Constant: Rho.Signature.OUTPUT_FORMAT_DATAURI (For Ruby use "::" instead of ".")<br/> String: dataUri </dt><dd><p>Outputs the signature capture image as a DataURI string. (Not available on iOS).</p>
</dt></dl></div><div class="tab-pane fade" id="poutputFormat6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Signature.outputFormat</code> </li><li>Ruby: <code>Rho::Signature.outputFormat</code></li></ul></li></ul></div></div></div>  </div><a name='ppenColor'></a><div class=' method  js ruby android ios' id='ppenColor'><h3><strong  >penColor</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  <span class='muted pull-right'>1.0.0</span></span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#ppenColor1" data-toggle="tab">Description</a></li><li ><a href="#ppenColor2" data-toggle="tab">Params</a></li><li ><a href="#ppenColor6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-penColor'><div class="tab-pane fade active in" id="ppenColor1"><p>RGB or ARGB value that sets the color of the stylus pen ink using HTML web colors.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="ppenColor2"><p><strong>Default:</strong> #FF000000</p></div><div class="tab-pane fade" id="ppenColor5"></div><div class="tab-pane fade" id="ppenColor6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Signature.penColor</code> </li><li>Ruby: <code>Rho::Signature.penColor</code></li></ul></li></ul></div></div></div>  </div><a name='ppenWidth'></a><div class=' method  js ruby android ios' id='ppenWidth'><h3><strong  >penWidth</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>INTEGER</span>  <span class='muted pull-right'>1.0.0</span></span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#ppenWidth1" data-toggle="tab">Description</a></li><li ><a href="#ppenWidth2" data-toggle="tab">Params</a></li><li ><a href="#ppenWidth6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-penWidth'><div class="tab-pane fade active in" id="ppenWidth1"><p>Sets the width of the pen line in pixels. Advised to keep this to 5 or less.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="ppenWidth2"><p><strong>Default:</strong> 3</p></div><div class="tab-pane fade" id="ppenWidth5"></div><div class="tab-pane fade" id="ppenWidth6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Signature.penWidth</code> </li><li>Ruby: <code>Rho::Signature.penWidth</code></li></ul></li></ul></div></div></div>  </div><a name='ptop'></a><div class=' method  js ruby android ios' id='ptop'><h3><strong  >top</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>INTEGER</span>  <span class='muted pull-right'>1.0.0</span></span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#ptop1" data-toggle="tab">Description</a></li><li ><a href="#ptop2" data-toggle="tab">Params</a></li><li ><a href="#ptop6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-top'><div class="tab-pane fade active in" id="ptop1"><p>The coordinates in pixels of the top side of the signature capture area. Not applicable to fullscreen signature capture area.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="ptop2"><p><strong>Default:</strong> 60</p></div><div class="tab-pane fade" id="ptop5"></div><div class="tab-pane fade" id="ptop6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Signature.top</code> </li><li>Ruby: <code>Rho::Signature.top</code></li></ul></li></ul></div></div></div>  </div><a name='pwidth'></a><div class=' method  js ruby android ios' id='pwidth'><h3><strong  >width</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>INTEGER</span>  <span class='muted pull-right'>1.0.0</span></span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pwidth1" data-toggle="tab">Description</a></li><li ><a href="#pwidth2" data-toggle="tab">Params</a></li><li ><a href="#pwidth6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-width'><div class="tab-pane fade active in" id="pwidth1"><p>The width of the signature capture area in pixels. Not applicable to fullscreen signature capture area.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pwidth2"><p><strong>Default:</strong> 200</p></div><div class="tab-pane fade" id="pwidth5"></div><div class="tab-pane fade" id="pwidth6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Signature.width</code> </li><li>Ruby: <code>Rho::Signature.width</code></li></ul></li></ul></div></div></div>  </div>
<a name='Examples'></a>
<h2><i class='icon-edit'></i>Examples</h2>

<a name='e0'></a><div class=' example' id='e0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample0"><strong>Capture signature to file (fullscreen) and display it in a view</strong></div><div id="cExample0" class="accordion-body">  <div class="accordion-inner">
<p>In order to capture a signature in full-screen mode you need to</p>
<ul class='nav nav-tabs' id='exI0-S0Tab'><li class='active'><a href='#exI0-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI0-S0RUBY'><pre class='CodeRay'><code>:::ruby
           
  def capture_fullscreen
    # Invoke signature capture screen and assign callback
    Rho::Signature.takeFullScreen({}, url_for(:action =&gt; :signature_callback))
    
    render :action =&gt; :show_signature
  end

  def signature_callback
    # If status is not 'ok', the capture was canceled
    if @params['status'] == 'ok'
    
      # By default, the output format is "image", so the imageUri parameter will contain the relative filename of an image
      # We must convert that relative filename to an absolute path in order to access the file
      signature = Rho::Application.expandDatabaseBlobFilePath(@params["imageUri"])

      # In our example, we will display the signature as soon as it is captured.
      # We have a JavaScript function in our page to set the src attribute of an img element and we will call it now
      # 
      WebView.executeJavascript("updateSignature('#{signature}')")
    else
      # if we did not really capture a signature, there is nothing else to do here
      WebView.navigate(url_for(:action =&gt; :index )) 
    end  
  end
                   
               </code></pre></div></div>
<p>In the view, we have an img element to display the captured signature and a JavaScript function to update it</p>
<ul class='nav nav-tabs' id='exI0-S1Tab'><li class='active'><a href='#exI0-S1JS' data-toggle='tab'>JavaScript</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI0-S1JS'><pre class='CodeRay'><code>:::javascript
           
&lt;div data-role="page"&gt;

    
  &lt;div data-role="header" data-position="in-line"&gt;
    &lt;h1&gt;Captured signature&lt;/h1&gt;
  &lt;/div&gt;

  &lt;div data-role="content"&gt;
    &lt;img id="signature-image" src="&lt;%= @signature %&gt;"&gt;
  &lt;/div&gt;

  &lt;script type="text/javascript"&gt;
    function updateSignature(signature) {
      $("#signature-image").attr('src',signature);
    }
  &lt;/script&gt;

&lt;/div&gt;
                   
               </code></pre></div></div>  </div></div></div></div><a name='e1'></a><div class=' example' id='e1'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample1"><strong>Set signature capture properties</strong></div><div id="cExample1" class="accordion-body">  <div class="accordion-inner">
<p>Several properties affect the appearance of the signature capture functionality. You can set their values before showing the capture interface:</p>
<ul class='nav nav-tabs' id='exI1-S0Tab'><li class='active'><a href='#exI1-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI1-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI1-S0JS'><pre class='CodeRay'><code>:::javascript

           
// Change full-screen from true (default) to false
// Change background color from white (default) to black
// Change pen color from blue (default) to white
Rho.Signature.show ({"fullScreen" : false, "bgColor" : "#000000", "penColor" : "#FFFFFF"});
                   
                 </code></pre></div><div class='tab-pane' id='exI1-S0RUBY'><pre class='CodeRay'><code>:::ruby

           
# Change full-screen from true (default) to false
# Change background color from white (default) to black
# Change pen color from blue (default) to white
Rho::Signature.show { :fullScreen =&gt; false, :bgColor =&gt; "#000000", :penColor =&gt; "#FFFFFF" }
                   
                 </code></pre></div></div>  </div></div></div></div><a name='e2'></a><div class=' example' id='e2'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample2"><strong>Capture as DataURI</strong></div><div id="cExample2" class="accordion-body">  <div class="accordion-inner">
<p>By default, the Signature API returns the capture as an image. If you prefer a DataURI representation of the signature, use the &ldquo;outputFormat&rdquo; property</p>
<ul class='nav nav-tabs' id='exI2-S0Tab'><li class='active'><a href='#exI2-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI2-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI2-S0JS'><pre class='CodeRay'><code>:::javascript

           
Rho.Signature.takeFullScreen({"outputFormat" : "dataUri"}, signature_callback)
                   
                 </code></pre></div><div class='tab-pane' id='exI2-S0RUBY'><pre class='CodeRay'><code>:::ruby

           
Rho::Signature.takeFullScreen({ :outputFormat =&gt; "dataUri" }, url_for(:action =&gt; :signature_callback))
                   
                 </code></pre></div></div>  </div></div></div></div>
<a name='Remarks'></a>
<h2><i class='icon-warning-sign'></i>Remarks</h2>

<a name='r0'></a><div class=' remarks' id='r0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark0"><strong>Fullscreen and In-line</strong></div><div id="cRemark0" class="accordion-body">  <div class="accordion-inner"><pre><code>                    The signature capture feature can work in two visual modes, Fullscreen and In-line. The fullscreen variant has buttons to capture, clear and cancel the signature capture box, so the methods: "clear", "hide", "capture" don't need to be used. Whereas with the in-line signature capture, there are no such buttons so these will have to be designed into the app itself.
</code></pre>
  </div></div></div></div><a name='r1'></a><div class=' remarks' id='r1'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark1"><strong>Parameters which clear the signature</strong></div><div id="cRemark1" class="accordion-body">  <div class="accordion-inner"><pre><code>                    The signature capture area is designed to be set up prior to capturing the signature, as such the following parameters will clear any current signature: "width", "height", "penColor", "bgColor".
</code></pre>
  </div></div></div></div><a name='r2'></a><div class=' remarks' id='r2'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark2"><strong>Page Navigation</strong></div><div id="cRemark2" class="accordion-body">  <div class="accordion-inner"><pre><code>                    In Android, the state of the signature will not be cleared on page navigation whereas in Windows, the state of the signature is cleared.
</code></pre>
  </div></div></div></div><a name='r3'></a><div class=' remarks' id='r3'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark3"><strong>Persistent Behaviour</strong></div><div id="cRemark3" class="accordion-body">  <div class="accordion-inner"><pre><code>                    While using "takeFullScreen" method, if we press Home button and re-launch the application the state won't be persisted in Android platform.
</code></pre>
  </div></div></div></div>
<a name='License'></a>
<h2><i class='icon-shopping-cart'></i>Licensing</h2>

<div class="accordion" id="accordion">You can fully use all features of this API during evaluation, development or testing without obtaining a license. A message will be displayed on application startup and will also display a nag screen periodically. Before deploying an application to a production environment, you must obtain a license key. <a href='/guide/licensing'>Read more about licensing</a>.</div></div>